--- a/model.ipynb
+++ b/model.ipynb
@@ -6,12 +6,12 @@
       "source": [
         "# Time series forecasting\n",
         "\n",
-        "## Score: .1711"
+        "## Score: .2161"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -86,10 +86,10 @@
         {
           "data": {
             "text/plain": [
-              "1514"
+              "10"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -99,7 +99,6 @@
         "train_cols = ['code', 'sub_code', 'sub_category', 'horizon', 'ts_index', 'y_target', 'weight']\n",
         "train_df = pd.read_parquet(TRAIN_PATH, columns=train_cols)\n",
         "print(f'Train shape: {train_df.shape}')\n",
-        "global_mean = train_df['y_target'].mean()\n",
         "\n",
         "global_encodings = {}\n",
         "for col in ['code', 'sub_code', 'sub_category']:\n",
@@ -108,6 +107,7 @@
         "    le = LabelEncoder()\n",
         "    le.fit(train_df[col].astype(str))\n",
         "    global_encodings[f'{col}_le'] = le\n",
+        "    global_mean = train_df['y_target'].mean()\n",
         "    counts = train_df[col].value_counts()\n",
         "    target_sum = train_df.groupby(col)['y_target'].sum()\n",
         "    alpha = 10\n",
@@ -119,17 +119,6 @@
         "    global_encodings[f'{col}_target_mean'] = target_mean\n",
         "    global_encodings[f'{col}_global_mean'] = global_mean\n",
         "\n",
-        "code_subcode = train_df.groupby(['code', 'sub_code'])['y_target'].agg(['sum', 'count'])\n",
-        "code_mean = train_df.groupby('code')['y_target'].mean().to_dict()\n",
-        "target_mean_cs = {}\n",
-        "for (c, sc) in code_subcode.index:\n",
-        "    s, n = code_subcode.loc[(c, sc), 'sum'], code_subcode.loc[(c, sc), 'count']\n",
-        "    gm = code_mean.get(c, global_mean)\n",
-        "    target_mean_cs[(c, sc)] = (s + alpha * gm) / (n + alpha)\n",
-        "global_encodings['code_subcode_target_mean'] = target_mean_cs\n",
-        "global_encodings['code_target_mean'] = code_mean\n",
-        "global_encodings['global_mean'] = global_mean\n",
-        "\n",
         "print('Encodings computed.')\n",
         "del train_df\n",
         "gc.collect()"
@@ -137,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -155,25 +144,18 @@
         "        df[f'{col}_encoded'] = encoded\n",
         "        gm = global_encodings[f'{col}_global_mean']\n",
         "        df[f'{col}_target_mean'] = df[col].map(global_encodings[f'{col}_target_mean']).fillna(gm).astype(np.float32)\n",
-        "    df['code_target_mean'] = df['code'].map(global_encodings['code_target_mean']).fillna(global_encodings['global_mean']).astype(np.float32)\n",
-        "    cs_map = global_encodings['code_subcode_target_mean']\n",
-        "    df['_cs_key'] = list(zip(df['code'], df['sub_code']))\n",
-        "    df['code_subcode_target_mean'] = df['_cs_key'].map(cs_map).fillna(df['code_target_mean']).astype(np.float32)\n",
-        "    df.drop(columns=['_cs_key'], inplace=True)\n",
         "    df['horizon_numeric'] = df['horizon'].astype(np.int8)\n",
         "    df = df.sort_values(group_cols + ['ts_index'])\n",
         "    df['position'] = df.groupby(group_cols).cumcount().astype(np.int16)\n",
         "    df['ts_mod_7'] = (df['ts_index'] % 7).astype(np.int8)\n",
-        "    tmin, tmax = df['ts_index'].min(), df['ts_index'].max()\n",
-        "    df['ts_index_norm'] = ((df['ts_index'] - tmin) / (tmax - tmin + 1e-5)).astype(np.float32)\n",
-        "    top_features = ['feature_al', 'feature_am', 'feature_cg', 'feature_by', 'feature_s', 'feature_ar', 'feature_bt', 'feature_cf', 'feature_bz', 'feature_ca', 'feature_cc', 'feature_cd', 'feature_ax', 'feature_av', 'feature_aw']\n",
+        "    top_features = ['feature_al', 'feature_am', 'feature_cg', 'feature_by', 'feature_s']\n",
         "    for col in top_features:\n",
         "        if col not in df.columns:\n",
         "            continue\n",
-        "        for lag in [1, 2, 3, 5, 10]:\n",
+        "        for lag in [1, 3, 10]:\n",
         "            df[f'{col}_lag{lag}'] = df.groupby(group_cols)[col].shift(lag).astype(np.float32)\n",
         "        df[f'{col}_diff1'] = df.groupby(group_cols)[col].diff(1).astype(np.float32)\n",
-        "        for window in [3, 5, 10]:\n",
+        "        for window in [5, 10]:\n",
         "            df[f'{col}_roll{window}'] = df.groupby(group_cols)[col].transform(\n",
         "                lambda x: x.rolling(window, min_periods=1).mean()\n",
         "            ).astype(np.float32)\n",
@@ -194,18 +176,19 @@
         "\n",
         "\n",
         "horizon_params = {\n",
-        "    1: {'n_estimators': 4000, 'learning_rate': 0.012, 'max_depth': 10, 'num_leaves': 255, 'min_child_samples': 5},\n",
-        "    3: {'n_estimators': 4000, 'learning_rate': 0.012, 'max_depth': 10, 'num_leaves': 255, 'min_child_samples': 5},\n",
-        "    10: {'n_estimators': 3500, 'learning_rate': 0.015, 'max_depth': 10, 'num_leaves': 200, 'min_child_samples': 5},\n",
-        "    25: {'n_estimators': 3000, 'learning_rate': 0.02, 'max_depth': 10, 'num_leaves': 180, 'min_child_samples': 5}\n",
+        "    1: {'n_estimators': 3000, 'learning_rate': 0.015, 'max_depth': 9, 'num_leaves': 200, 'min_child_samples': 15},\n",
+        "    3: {'n_estimators': 3000, 'learning_rate': 0.015, 'max_depth': 9, 'num_leaves': 200, 'min_child_samples': 15},\n",
+        "    10: {'n_estimators': 2500, 'learning_rate': 0.02, 'max_depth': 9, 'num_leaves': 150, 'min_child_samples': 15},\n",
+        "    25: {'n_estimators': 2000, 'learning_rate': 0.025, 'max_depth': 9, 'num_leaves': 120, 'min_child_samples': 15}\n",
         "}\n",
-        "RECENCY_ALPHA = 0.0003\n",
-        "SEEDS = [42, 123, 456, 789, 2024]"
+        "SEEDS = [42, 420, 80085]\n",
+        "REG_ALPHA = 0.5\n",
+        "REG_LAMBDA = 0.5"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -213,13 +196,13 @@
           "output_type": "stream",
           "text": [
             "Horizon 1...\n",
-            "  Val score: 0.066181\n",
+            "  Val score: 0.068658\n",
             "Horizon 3...\n",
-            "  Val score: 0.046548\n",
+            "  Val score: 0.099646\n",
             "Horizon 10...\n",
-            "  Val score: 0.252963\n",
+            "  Val score: 0.207539\n",
             "Horizon 25...\n",
-            "  Val score: 0.339578\n"
+            "  Val score: 0.194420\n"
           ]
         }
       ],
@@ -246,10 +229,7 @@
         "        test_h[c] = test_h[c].fillna(0).astype(np.float32)\n",
         "\n",
         "    train_mask = train_h['ts_index'] <= VAL_THRESHOLD\n",
-        "    train_ts = train_h.loc[train_mask, 'ts_index'].values.astype(np.float64)\n",
-        "    recency_weight = np.exp(RECENCY_ALPHA * (train_ts - train_ts.min()))\n",
-        "    w_train_base = train_h.loc[train_mask, 'weight'].values.astype(np.float64)\n",
-        "    w_train = w_train_base * recency_weight\n",
+        "    w_train = train_h.loc[train_mask, 'weight'].values.astype(np.float64)\n",
         "\n",
         "    X_train = train_h.loc[train_mask, feature_cols].values.astype(np.float32)\n",
         "    y_train = train_h.loc[train_mask, 'y_target'].values.astype(np.float32)\n",
@@ -267,11 +247,11 @@
         "            n_estimators=params['n_estimators'], learning_rate=params['learning_rate'],\n",
         "            max_depth=params['max_depth'], num_leaves=params['num_leaves'],\n",
         "            min_child_samples=params['min_child_samples'], subsample=0.85, colsample_bytree=0.85,\n",
-        "            reg_alpha=0.1, reg_lambda=0.1, random_state=seed, verbose=-1, n_jobs=-1\n",
+        "            reg_alpha=REG_ALPHA, reg_lambda=REG_LAMBDA, random_state=seed, verbose=-1, n_jobs=-1\n",
         "        )\n",
         "        model.fit(X_train, y_train, sample_weight=w_train,\n",
         "                  eval_set=[(X_val, y_val)], eval_sample_weight=[w_val],\n",
-        "                  callbacks=[lgb.early_stopping(400, verbose=False)])\n",
+        "                  callbacks=[lgb.early_stopping(300, verbose=False)])\n",
         "        val_preds_list.append(model.predict(X_val))\n",
         "        test_preds_list.append(model.predict(X_test))\n",
         "        del model\n",
@@ -289,31 +269,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Overall validation score: 0.279640\n",
-            "  H1: 0.066181\n",
-            "  H3: 0.046548\n",
-            "  H10: 0.252963\n",
-            "  H25: 0.339578\n",
+            "Overall validation score: 0.183250\n",
+            "  H1: 0.068658\n",
+            "  H3: 0.099646\n",
+            "  H10: 0.207539\n",
+            "  H25: 0.194420\n",
             "Submission shape: (1447107, 2)\n",
             "                                       id  prediction\n",
-            "0   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3647   -0.003403\n",
-            "1  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3647   -0.079713\n",
-            "2  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3647   -0.313772\n",
-            "3   W2MW3G2L__495MGHFJ__PZ9S1Z4V__1__3647   -0.004419\n",
-            "4  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3648   -0.089209\n",
-            "5  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3648   -0.333752\n",
-            "6   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3648   -0.004428\n",
-            "7   W2MW3G2L__495MGHFJ__PZ9S1Z4V__1__3648   -0.006082\n",
-            "8   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3649   -0.002697\n",
-            "9  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3649   -0.335541\n",
-            "2026-01-30 13:12:26.774935\n"
+            "0   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3647   -0.046674\n",
+            "1  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3647   -0.084405\n",
+            "2  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3647   -0.245876\n",
+            "3   W2MW3G2L__495MGHFJ__PZ9S1Z4V__1__3647   -0.002779\n",
+            "4  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3648   -0.117811\n",
+            "5  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3648   -0.239588\n",
+            "6   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3648   -0.046782\n",
+            "7   W2MW3G2L__495MGHFJ__PZ9S1Z4V__1__3648   -0.002446\n",
+            "8   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3649   -0.040250\n",
+            "9  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3649   -0.232495\n",
+            "2026-02-02 12:16:53.009615\n"
           ]
         }
       ],
