--- a/model.ipynb
+++ b/model.ipynb
@@ -6,12 +6,12 @@
       "source": [
         "# Time series forecasting\n",
         "\n",
-        "## Score: .2161"
+        "## Score: .1960"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -25,19 +25,20 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import lightgbm as lgb\n",
+        "import catboost as cb\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "from sklearn.metrics import mean_squared_error"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
         "TRAIN_PATH = 'ts-forecasting/train.parquet'\n",
         "TEST_PATH = 'ts-forecasting/test.parquet'\n",
-        "VAL_THRESHOLD = 3500\n",
+        "VAL_THRESHOLD = 3400\n",
         "\n",
         "\n",
         "def reduce_mem_usage(df):\n",
@@ -71,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -86,10 +87,10 @@
         {
           "data": {
             "text/plain": [
-              "10"
+              "0"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -126,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -181,14 +182,16 @@
         "    10: {'n_estimators': 2500, 'learning_rate': 0.02, 'max_depth': 9, 'num_leaves': 150, 'min_child_samples': 15},\n",
         "    25: {'n_estimators': 2000, 'learning_rate': 0.025, 'max_depth': 9, 'num_leaves': 120, 'min_child_samples': 15}\n",
         "}\n",
-        "SEEDS = [42, 420, 80085]\n",
+        "SEEDS = [42, 420, 666, 69420, 80085]\n",
         "REG_ALPHA = 0.5\n",
-        "REG_LAMBDA = 0.5"
+        "REG_LAMBDA = 0.5\n",
+        "LGB_BLEND = 0.7\n",
+        "CAT_BLEND = 0.3"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -196,13 +199,13 @@
           "output_type": "stream",
           "text": [
             "Horizon 1...\n",
-            "  Val score: 0.068658\n",
+            "  Val score: 0.060808\n",
             "Horizon 3...\n",
-            "  Val score: 0.099646\n",
+            "  Val score: 0.085442\n",
             "Horizon 10...\n",
-            "  Val score: 0.207539\n",
+            "  Val score: 0.157417\n",
             "Horizon 25...\n",
-            "  Val score: 0.194420\n"
+            "  Val score: 0.221642\n"
           ]
         }
       ],
@@ -257,8 +260,24 @@
         "        del model\n",
         "        gc.collect()\n",
         "\n",
-        "    val_pred_avg = np.mean(val_preds_list, axis=0)\n",
-        "    test_pred_avg = np.mean(test_preds_list, axis=0)\n",
+        "    val_pred_lgb = np.mean(val_preds_list, axis=0)\n",
+        "    test_pred_lgb = np.mean(test_preds_list, axis=0)\n",
+        "\n",
+        "    cb_model = cb.CatBoostRegressor(\n",
+        "        iterations=3000, learning_rate=0.03, depth=9, loss_function='RMSE',\n",
+        "        random_seed=42, verbose=0, early_stopping_rounds=300\n",
+        "    )\n",
+        "    cb_model.fit(\n",
+        "        X_train, y_train, sample_weight=w_train,\n",
+        "        eval_set=(X_val, y_val), verbose=False\n",
+        "    )\n",
+        "    val_pred_cat = cb_model.predict(X_val)\n",
+        "    test_pred_cat = cb_model.predict(X_test)\n",
+        "    del cb_model\n",
+        "    gc.collect()\n",
+        "\n",
+        "    val_pred_avg = LGB_BLEND * val_pred_lgb + CAT_BLEND * val_pred_cat\n",
+        "    test_pred_avg = LGB_BLEND * test_pred_lgb + CAT_BLEND * test_pred_cat\n",
         "    h_score = weighted_rmse_score(y_val, val_pred_avg, w_val)\n",
         "    print(f'  Val score: {h_score:.6f}')\n",
         "    all_val_results.append({'horizon': horizon, 'score': h_score, 'y_val': y_val, 'pred_val': val_pred_avg, 'w_val': w_val})\n",
@@ -269,31 +288,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Overall validation score: 0.183250\n",
-            "  H1: 0.068658\n",
-            "  H3: 0.099646\n",
-            "  H10: 0.207539\n",
-            "  H25: 0.194420\n",
+            "Overall validation score: 0.183268\n",
+            "  H1: 0.060808\n",
+            "  H3: 0.085442\n",
+            "  H10: 0.157417\n",
+            "  H25: 0.221642\n",
             "Submission shape: (1447107, 2)\n",
             "                                       id  prediction\n",
-            "0   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3647   -0.046674\n",
-            "1  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3647   -0.084405\n",
-            "2  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3647   -0.245876\n",
-            "3   W2MW3G2L__495MGHFJ__PZ9S1Z4V__1__3647   -0.002779\n",
-            "4  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3648   -0.117811\n",
-            "5  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3648   -0.239588\n",
-            "6   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3648   -0.046782\n",
-            "7   W2MW3G2L__495MGHFJ__PZ9S1Z4V__1__3648   -0.002446\n",
-            "8   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3649   -0.040250\n",
-            "9  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3649   -0.232495\n",
-            "2026-02-02 12:16:53.009615\n"
+            "0   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3647   -0.015048\n",
+            "1  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3647   -0.107302\n",
+            "2  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3647   -0.261384\n",
+            "3   W2MW3G2L__495MGHFJ__PZ9S1Z4V__1__3647   -0.002582\n",
+            "4  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3648   -0.114281\n",
+            "5  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3648   -0.266036\n",
+            "6   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3648   -0.010880\n",
+            "7   W2MW3G2L__495MGHFJ__PZ9S1Z4V__1__3648   -0.003047\n",
+            "8   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3649   -0.010259\n",
+            "9  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3649   -0.248590\n",
+            "2026-02-02 13:47:45.775829\n"
           ]
         }
       ],
