--- a/model.ipynb
+++ b/model.ipynb
@@ -220,11 +220,12 @@
         "        del mdl\n",
         "        gc.collect()\n",
         "\n",
+        "    print(f'Horizon {hz} Score: {weighted_rmse_score(y_hold, val_pred, w_hold):.5f}')\n",
+        "\n",
         "    cv_cache['y'].extend(y_hold.tolist())\n",
         "    cv_cache['pred'].extend(val_pred.tolist())\n",
         "    cv_cache['wt'].extend(w_hold.tolist())\n",
         "\n",
-        "    print(f'Horizon {hz} Score: {weighted_rmse_score(y_hold, val_pred, w_hold):.5f}')\n",
         "    test_outputs.append(pd.DataFrame({'id': te_df['id'].values, 'prediction': tst_pred}))\n",
         "\n",
         "    del tr_df, te_df, X_fit, y_fit, w_fit, X_hold, y_hold, w_hold\n",
@@ -245,6 +246,7 @@
             "FINAL AGGREGATE SCORE: 0.223828\n",
             "========================================\n",
             "Submission shape: (1447107, 2)\n",
+            "First 10 rows (must match test row order):\n",
             "                                       id  prediction\n",
             "0   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3647   -0.053746\n",
             "1  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3647   -0.103430\n",
@@ -263,17 +265,36 @@
         "final_metric = weighted_rmse_score(cv_cache['y'], cv_cache['pred'], cv_cache['wt'])\n",
         "print(f\"\\n{'='*40}\\nFINAL AGGREGATE SCORE: {final_metric:.6f}\\n{'='*40}\")\n",
         "\n",
-        "# Submission in test row order (required for correct scoring)\n",
+        "# Submission: MUST be in exact test.parquet row order (row i = test row i)\n",
         "test_full = pd.read_parquet(TEST_PATH)\n",
         "pred_dict = {}\n",
         "for df in test_outputs:\n",
         "    for i in range(len(df)):\n",
-        "        pred_dict[str(df['id'].iloc[i])] = float(df['prediction'].iloc[i])\n",
-        "submission = test_full[['id']].copy()\n",
-        "submission['prediction'] = submission['id'].astype(str).map(pred_dict)\n",
-        "assert submission['prediction'].notna().all(), \"Missing predictions for some test ids\"\n",
-        "submission[['id', 'prediction']].to_csv('submission.csv', index=False)\n",
+        "        k = str(df['id'].iloc[i]).strip()\n",
+        "        pred_dict[k] = float(df['prediction'].iloc[i])\n",
+        "\n",
+        "# Normalize test ids the same way for lookup\n",
+        "test_ids = test_full['id'].astype(str).str.strip()\n",
+        "missing = test_ids[~test_ids.isin(pred_dict)].unique()\n",
+        "if len(missing) > 0:\n",
+        "    raise RuntimeError(f\"{len(missing)} test ids not in pred_dict (e.g. {list(missing[:3])})\")\n",
+        "if len(pred_dict) != len(test_full):\n",
+        "    raise RuntimeError(f\"pred_dict has {len(pred_dict)} keys but test has {len(test_full)} rows\")\n",
+        "\n",
+        "# Build submission in test row order and write row-by-row (no reorder)\n",
+        "with open('submission.csv', 'w', newline='') as f:\n",
+        "    f.write('id,prediction\\n')\n",
+        "    for i in range(len(test_full)):\n",
+        "        id_val = test_full['id'].iloc[i]\n",
+        "        key = str(id_val).strip()\n",
+        "        pred = pred_dict[key]\n",
+        "        if np.isnan(pred):\n",
+        "            raise RuntimeError(f\"NaN prediction for id {id_val}\")\n",
+        "        f.write(f\"{id_val},{pred:.10f}\\n\")\n",
+        "\n",
+        "submission = pd.read_csv('submission.csv')\n",
         "print(f'Submission shape: {submission.shape}')\n",
+        "print('First 10 rows (must match test row order):')\n",
         "print(submission.head(10))"
       ]
     }
