--- a/model.ipynb
+++ b/model.ipynb
@@ -6,12 +6,12 @@
       "source": [
         "# Time series forecasting\n",
         "\n",
-        "## Score: .2618"
+        "## Score: .2425"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -104,7 +104,20 @@
         "    if 'feature_cg' in x.columns and 'feature_by' in x.columns:\n",
         "        x['d_cg_by'] = (x['feature_cg'] - x['feature_by']).astype(np.float32)\n",
         "\n",
-        "    top_features = ['feature_al', 'feature_am', 'feature_cg', 'feature_by', 'feature_s']\n",
+        "    # EDA-identified factor set (strong correlation with y_target globally + high-weight)\n",
+        "    top_features = [\n",
+        "        'feature_al', 'feature_am', 'feature_cg', 'feature_by', 'feature_s',\n",
+        "        'feature_bz', 'feature_cd', 'feature_af', 'feature_u', 'feature_bo', 'feature_bm',\n",
+        "        'feature_ag', 'feature_o', 'feature_t', 'feature_k', 'feature_h', 'feature_l',\n",
+        "        'feature_a', 'feature_bn', 'feature_ar', 'feature_cc', 'feature_ch'\n",
+        "    ]\n",
+        "    # Cross-sectional z-score within each ts_index (EDA: relative position matters)\n",
+        "    for col in top_features:\n",
+        "        if col not in x.columns:\n",
+        "            continue\n",
+        "        mean_ts = x.groupby('ts_index')[col].transform('mean').astype(np.float32)\n",
+        "        std_ts = x.groupby('ts_index')[col].transform('std').astype(np.float32)\n",
+        "        x[f'z_{col}'] = ((x[col] - mean_ts) / (std_ts + 1e-7)).astype(np.float32)\n",
         "    for col in top_features:\n",
         "        if col not in x.columns:\n",
         "            continue\n",
@@ -140,13 +153,37 @@
         "    'lambda_l2': 10.0,\n",
         "    'verbosity': -1,\n",
         "}\n",
+        "# Slightly different config for factor-only / late-time (diversity)\n",
+        "LGB_CFG_B = {\n",
+        "    'objective': 'regression',\n",
+        "    'metric': 'rmse',\n",
+        "    'learning_rate': 0.012,\n",
+        "    'n_estimators': 3500,\n",
+        "    'num_leaves': 64,\n",
+        "    'min_child_samples': 250,\n",
+        "    'feature_fraction': 0.55,\n",
+        "    'bagging_fraction': 0.65,\n",
+        "    'bagging_freq': 5,\n",
+        "    'lambda_l1': 0.15,\n",
+        "    'lambda_l2': 12.0,\n",
+        "    'verbosity': -1,\n",
+        "}\n",
         "SEEDS = (42, 2024, 7, 11, 999)\n",
-        "N_SEEDS = 5"
+        "N_SEEDS = 5\n",
+        "# EDA: factor set for dedicated model; late-time regime for H=10/25\n",
+        "FACTOR_BASES = [\n",
+        "    'feature_bz', 'feature_cd', 'feature_by', 'feature_af', 'feature_u',\n",
+        "    'feature_bo', 'feature_bm', 'feature_ag', 'feature_s', 'feature_a',\n",
+        "    'feature_bn', 'feature_ar', 'feature_cc', 'feature_ch'\n",
+        "]\n",
+        "LATE_TS_MIN = 3200\n",
+        "# Conservative blend: main stays dominant\n",
+        "BLEND_MAIN, BLEND_FACTOR, BLEND_LATE = 0.80, 0.15, 0.05"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -155,16 +192,16 @@
           "text": [
             "\n",
             ">>> Training horizon = 1\n",
-            "Horizon 1 Score: 0.06690\n",
+            "Horizon 1 Score: 0.07557\n",
             "\n",
             ">>> Training horizon = 3\n",
-            "Horizon 3 Score: 0.12382\n",
+            "Horizon 3 Score: 0.10957\n",
             "\n",
             ">>> Training horizon = 10\n",
-            "Horizon 10 Score: 0.21332\n",
+            "Horizon 10 Score: 0.19588\n",
             "\n",
             ">>> Training horizon = 25\n",
-            "Horizon 25 Score: 0.25960\n"
+            "Horizon 25 Score: 0.25933\n"
           ]
         }
       ],
@@ -192,6 +229,10 @@
         "        tr_df[c] = tr_df[c].fillna(0).astype(np.float32)\n",
         "        te_df[c] = te_df[c].fillna(0).astype(np.float32)\n",
         "\n",
+        "    factor_cols = [c for c in feature_cols if any(c.startswith(b) for b in FACTOR_BASES)]\n",
+        "    if not factor_cols:\n",
+        "        factor_cols = feature_cols.copy()\n",
+        "\n",
         "    fit_mask = tr_df['ts_index'] <= VAL_THRESHOLD\n",
         "    val_mask = ~fit_mask\n",
         "\n",
@@ -203,8 +244,25 @@
         "    y_hold = tr_df.loc[val_mask, 'y_target']\n",
         "    w_hold = tr_df.loc[val_mask, 'weight']\n",
         "\n",
+        "    X_fit_f = tr_df.loc[fit_mask, factor_cols]\n",
+        "    X_hold_f = tr_df.loc[val_mask, factor_cols]\n",
+        "    X_te_f = te_df[factor_cols]\n",
+        "\n",
         "    val_pred = np.zeros(len(y_hold), dtype=np.float64)\n",
         "    tst_pred = np.zeros(len(te_df), dtype=np.float64)\n",
+        "    val_pred_F = np.zeros(len(y_hold), dtype=np.float64)\n",
+        "    tst_pred_F = np.zeros(len(te_df), dtype=np.float64)\n",
+        "\n",
+        "    use_late = hz in (10, 25)\n",
+        "    if use_late:\n",
+        "        late_mask = (tr_df['ts_index'] >= LATE_TS_MIN) & (tr_df['ts_index'] <= VAL_THRESHOLD)\n",
+        "        use_late = late_mask.sum() >= 1500\n",
+        "    if use_late:\n",
+        "        X_fit_l = tr_df.loc[late_mask, factor_cols]\n",
+        "        y_fit_l = tr_df.loc[late_mask, 'y_target']\n",
+        "        w_fit_l = tr_df.loc[late_mask, 'weight']\n",
+        "        val_pred_L = np.zeros(len(y_hold), dtype=np.float64)\n",
+        "        tst_pred_L = np.zeros(len(te_df), dtype=np.float64)\n",
         "\n",
         "    for seed in SEEDS:\n",
         "        mdl = lgb.LGBMRegressor(**LGB_CFG, random_state=seed, n_jobs=-1)\n",
@@ -220,6 +278,40 @@
         "        del mdl\n",
         "        gc.collect()\n",
         "\n",
+        "        mdl = lgb.LGBMRegressor(**LGB_CFG_B, random_state=seed + 100, n_jobs=-1)\n",
+        "        mdl.fit(\n",
+        "            X_fit_f, y_fit,\n",
+        "            sample_weight=w_fit,\n",
+        "            eval_set=[(X_hold_f, y_hold)],\n",
+        "            eval_sample_weight=[w_hold],\n",
+        "            callbacks=[lgb.early_stopping(200, verbose=False)]\n",
+        "        )\n",
+        "        val_pred_F += mdl.predict(X_hold_f).astype(np.float64) / N_SEEDS\n",
+        "        tst_pred_F += mdl.predict(X_te_f).astype(np.float64) / N_SEEDS\n",
+        "        del mdl\n",
+        "        gc.collect()\n",
+        "\n",
+        "        if use_late:\n",
+        "            mdl = lgb.LGBMRegressor(**LGB_CFG_B, random_state=seed + 200, n_jobs=-1)\n",
+        "            mdl.fit(\n",
+        "                X_fit_l, y_fit_l,\n",
+        "                sample_weight=w_fit_l,\n",
+        "                eval_set=[(X_hold_f, y_hold)],\n",
+        "                eval_sample_weight=[w_hold],\n",
+        "                callbacks=[lgb.early_stopping(150, verbose=False)]\n",
+        "            )\n",
+        "            val_pred_L += mdl.predict(X_hold_f).astype(np.float64) / N_SEEDS\n",
+        "            tst_pred_L += mdl.predict(X_te_f).astype(np.float64) / N_SEEDS\n",
+        "            del mdl\n",
+        "            gc.collect()\n",
+        "\n",
+        "    if use_late:\n",
+        "        val_pred = BLEND_MAIN * val_pred + BLEND_FACTOR * val_pred_F + BLEND_LATE * val_pred_L\n",
+        "        tst_pred = BLEND_MAIN * tst_pred + BLEND_FACTOR * tst_pred_F + BLEND_LATE * tst_pred_L\n",
+        "    else:\n",
+        "        val_pred = 0.85 * val_pred + 0.15 * val_pred_F\n",
+        "        tst_pred = 0.85 * tst_pred + 0.15 * tst_pred_F\n",
+        "\n",
         "    print(f'Horizon {hz} Score: {weighted_rmse_score(y_hold, val_pred, w_hold):.5f}')\n",
         "\n",
         "    cv_cache['y'].extend(y_hold.tolist())\n",
@@ -234,7 +326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -243,21 +335,21 @@
           "text": [
             "\n",
             "========================================\n",
-            "FINAL AGGREGATE SCORE: 0.223828\n",
+            "FINAL AGGREGATE SCORE: 0.218067\n",
             "========================================\n",
             "Submission shape: (1447107, 2)\n",
             "First 10 rows (must match test row order):\n",
             "                                       id  prediction\n",
-            "0   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3647   -0.053746\n",
-            "1  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3647   -0.103430\n",
-            "2  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3647   -0.362948\n",
-            "3   W2MW3G2L__495MGHFJ__PZ9S1Z4V__1__3647   -0.008905\n",
-            "4  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3648   -0.112227\n",
-            "5  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3648   -0.454240\n",
-            "6   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3648   -0.044495\n",
-            "7   W2MW3G2L__495MGHFJ__PZ9S1Z4V__1__3648   -0.011438\n",
-            "8   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3649   -0.044476\n",
-            "9  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3649   -0.434736\n"
+            "0   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3647   -0.038169\n",
+            "1  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3647   -0.091164\n",
+            "2  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3647   -0.329147\n",
+            "3   W2MW3G2L__495MGHFJ__PZ9S1Z4V__1__3647   -0.004943\n",
+            "4  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3648   -0.106950\n",
+            "5  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3648   -0.447662\n",
+            "6   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3648   -0.036870\n",
+            "7   W2MW3G2L__495MGHFJ__PZ9S1Z4V__1__3648   -0.006619\n",
+            "8   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3649   -0.030094\n",
+            "9  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3649   -0.415774\n"
           ]
         }
       ],
