--- a/model.ipynb
+++ b/model.ipynb
@@ -6,12 +6,12 @@
       "source": [
         "# Time series forecasting\n",
         "\n",
-        "## Score: .2425"
+        "## Score: .1299"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -40,7 +40,9 @@
         "    TRAIN_PATH = 'ts-forecasting/train.parquet'\n",
         "    TEST_PATH = 'ts-forecasting/test.parquet'\n",
         "\n",
-        "VAL_THRESHOLD = 3500\n",
+        "VAL_THRESHOLD = 3600\n",
+        "# If LB is 0 with id order, set False to write in parquet row order instead\n",
+        "SUBMISSION_BY_ID_ORDER = True\n",
         "\n",
         "\n",
         "def weighted_rmse_score(y_target, y_pred, w):\n",
@@ -56,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -83,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -104,20 +106,7 @@
         "    if 'feature_cg' in x.columns and 'feature_by' in x.columns:\n",
         "        x['d_cg_by'] = (x['feature_cg'] - x['feature_by']).astype(np.float32)\n",
         "\n",
-        "    # EDA-identified factor set (strong correlation with y_target globally + high-weight)\n",
-        "    top_features = [\n",
-        "        'feature_al', 'feature_am', 'feature_cg', 'feature_by', 'feature_s',\n",
-        "        'feature_bz', 'feature_cd', 'feature_af', 'feature_u', 'feature_bo', 'feature_bm',\n",
-        "        'feature_ag', 'feature_o', 'feature_t', 'feature_k', 'feature_h', 'feature_l',\n",
-        "        'feature_a', 'feature_bn', 'feature_ar', 'feature_cc', 'feature_ch'\n",
-        "    ]\n",
-        "    # Cross-sectional z-score within each ts_index (EDA: relative position matters)\n",
-        "    for col in top_features:\n",
-        "        if col not in x.columns:\n",
-        "            continue\n",
-        "        mean_ts = x.groupby('ts_index')[col].transform('mean').astype(np.float32)\n",
-        "        std_ts = x.groupby('ts_index')[col].transform('std').astype(np.float32)\n",
-        "        x[f'z_{col}'] = ((x[col] - mean_ts) / (std_ts + 1e-7)).astype(np.float32)\n",
+        "    top_features = ['feature_al', 'feature_am', 'feature_cg', 'feature_by', 'feature_s']\n",
         "    for col in top_features:\n",
         "        if col not in x.columns:\n",
         "            continue\n",
@@ -134,6 +123,16 @@
         "        x[f'{col}_ewm5'] = x.groupby(group_cols)[col].transform(\n",
         "            lambda s: s.ewm(span=5, adjust=False).mean()\n",
         "        ).astype(np.float32)\n",
+        "\n",
+        "    # Cross-sectional z-score (within ts_index, horizon) for key features; safe for test\n",
+        "    for col in ['feature_al', 'feature_am', 'feature_cg', 'feature_by']:\n",
+        "        if col not in x.columns:\n",
+        "            continue\n",
+        "        grp = x.groupby(['ts_index', 'horizon'])[col]\n",
+        "        mu_cs = grp.transform('mean').astype(np.float32)\n",
+        "        std_cs = grp.transform('std').astype(np.float32).replace(0, np.nan)\n",
+        "        x[f'{col}_cs_z'] = ((x[col] - mu_cs) / std_cs.fillna(1e-3)).fillna(0).astype(np.float32)\n",
+        "    x['horizon_num'] = x['horizon'].astype(np.float32)\n",
         "\n",
         "    x['t_cycle'] = np.sin(2 * np.pi * x['ts_index'].astype(np.float32) / 100).astype(np.float32)\n",
         "    return x\n",
@@ -153,37 +152,13 @@
         "    'lambda_l2': 10.0,\n",
         "    'verbosity': -1,\n",
         "}\n",
-        "# Slightly different config for factor-only / late-time (diversity)\n",
-        "LGB_CFG_B = {\n",
-        "    'objective': 'regression',\n",
-        "    'metric': 'rmse',\n",
-        "    'learning_rate': 0.012,\n",
-        "    'n_estimators': 3500,\n",
-        "    'num_leaves': 64,\n",
-        "    'min_child_samples': 250,\n",
-        "    'feature_fraction': 0.55,\n",
-        "    'bagging_fraction': 0.65,\n",
-        "    'bagging_freq': 5,\n",
-        "    'lambda_l1': 0.15,\n",
-        "    'lambda_l2': 12.0,\n",
-        "    'verbosity': -1,\n",
-        "}\n",
         "SEEDS = (42, 2024, 7, 11, 999)\n",
-        "N_SEEDS = 5\n",
-        "# EDA: factor set for dedicated model; late-time regime for H=10/25\n",
-        "FACTOR_BASES = [\n",
-        "    'feature_bz', 'feature_cd', 'feature_by', 'feature_af', 'feature_u',\n",
-        "    'feature_bo', 'feature_bm', 'feature_ag', 'feature_s', 'feature_a',\n",
-        "    'feature_bn', 'feature_ar', 'feature_cc', 'feature_ch'\n",
-        "]\n",
-        "LATE_TS_MIN = 3200\n",
-        "# Conservative blend: main stays dominant\n",
-        "BLEND_MAIN, BLEND_FACTOR, BLEND_LATE = 0.80, 0.15, 0.05"
+        "N_SEEDS = 5"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -192,16 +167,16 @@
           "text": [
             "\n",
             ">>> Training horizon = 1\n",
-            "Horizon 1 Score: 0.07557\n",
+            "Horizon 1 Score: 0.10435\n",
             "\n",
             ">>> Training horizon = 3\n",
-            "Horizon 3 Score: 0.10957\n",
+            "Horizon 3 Score: 0.00000\n",
             "\n",
             ">>> Training horizon = 10\n",
-            "Horizon 10 Score: 0.19588\n",
+            "Horizon 10 Score: 0.00000\n",
             "\n",
             ">>> Training horizon = 25\n",
-            "Horizon 25 Score: 0.25933\n"
+            "Horizon 25 Score: 0.09142\n"
           ]
         }
       ],
@@ -229,43 +204,26 @@
         "        tr_df[c] = tr_df[c].fillna(0).astype(np.float32)\n",
         "        te_df[c] = te_df[c].fillna(0).astype(np.float32)\n",
         "\n",
-        "    factor_cols = [c for c in feature_cols if any(c.startswith(b) for b in FACTOR_BASES)]\n",
-        "    if not factor_cols:\n",
-        "        factor_cols = feature_cols.copy()\n",
-        "\n",
         "    fit_mask = tr_df['ts_index'] <= VAL_THRESHOLD\n",
         "    val_mask = ~fit_mask\n",
         "\n",
         "    X_fit = tr_df.loc[fit_mask, feature_cols]\n",
         "    y_fit = tr_df.loc[fit_mask, 'y_target']\n",
         "    w_fit = tr_df.loc[fit_mask, 'weight']\n",
-        "\n",
         "    X_hold = tr_df.loc[val_mask, feature_cols]\n",
         "    y_hold = tr_df.loc[val_mask, 'y_target']\n",
         "    w_hold = tr_df.loc[val_mask, 'weight']\n",
         "\n",
-        "    X_fit_f = tr_df.loc[fit_mask, factor_cols]\n",
-        "    X_hold_f = tr_df.loc[val_mask, factor_cols]\n",
-        "    X_te_f = te_df[factor_cols]\n",
-        "\n",
         "    val_pred = np.zeros(len(y_hold), dtype=np.float64)\n",
         "    tst_pred = np.zeros(len(te_df), dtype=np.float64)\n",
-        "    val_pred_F = np.zeros(len(y_hold), dtype=np.float64)\n",
-        "    tst_pred_F = np.zeros(len(te_df), dtype=np.float64)\n",
         "\n",
-        "    use_late = hz in (10, 25)\n",
-        "    if use_late:\n",
-        "        late_mask = (tr_df['ts_index'] >= LATE_TS_MIN) & (tr_df['ts_index'] <= VAL_THRESHOLD)\n",
-        "        use_late = late_mask.sum() >= 1500\n",
-        "    if use_late:\n",
-        "        X_fit_l = tr_df.loc[late_mask, factor_cols]\n",
-        "        y_fit_l = tr_df.loc[late_mask, 'y_target']\n",
-        "        w_fit_l = tr_df.loc[late_mask, 'weight']\n",
-        "        val_pred_L = np.zeros(len(y_hold), dtype=np.float64)\n",
-        "        tst_pred_L = np.zeros(len(te_df), dtype=np.float64)\n",
+        "    cfg = dict(LGB_CFG)\n",
+        "    if hz in (10, 25):\n",
+        "        cfg = {**cfg, 'learning_rate': 0.01, 'n_estimators': 6500, 'num_leaves': 96,\n",
+        "               'min_child_samples': 250, 'lambda_l2': 28.0}\n",
         "\n",
         "    for seed in SEEDS:\n",
-        "        mdl = lgb.LGBMRegressor(**LGB_CFG, random_state=seed, n_jobs=-1)\n",
+        "        mdl = lgb.LGBMRegressor(**cfg, random_state=seed, n_jobs=-1)\n",
         "        mdl.fit(\n",
         "            X_fit, y_fit,\n",
         "            sample_weight=w_fit,\n",
@@ -277,40 +235,6 @@
         "        tst_pred += mdl.predict(te_df[feature_cols]).astype(np.float64) / N_SEEDS\n",
         "        del mdl\n",
         "        gc.collect()\n",
-        "\n",
-        "        mdl = lgb.LGBMRegressor(**LGB_CFG_B, random_state=seed + 100, n_jobs=-1)\n",
-        "        mdl.fit(\n",
-        "            X_fit_f, y_fit,\n",
-        "            sample_weight=w_fit,\n",
-        "            eval_set=[(X_hold_f, y_hold)],\n",
-        "            eval_sample_weight=[w_hold],\n",
-        "            callbacks=[lgb.early_stopping(200, verbose=False)]\n",
-        "        )\n",
-        "        val_pred_F += mdl.predict(X_hold_f).astype(np.float64) / N_SEEDS\n",
-        "        tst_pred_F += mdl.predict(X_te_f).astype(np.float64) / N_SEEDS\n",
-        "        del mdl\n",
-        "        gc.collect()\n",
-        "\n",
-        "        if use_late:\n",
-        "            mdl = lgb.LGBMRegressor(**LGB_CFG_B, random_state=seed + 200, n_jobs=-1)\n",
-        "            mdl.fit(\n",
-        "                X_fit_l, y_fit_l,\n",
-        "                sample_weight=w_fit_l,\n",
-        "                eval_set=[(X_hold_f, y_hold)],\n",
-        "                eval_sample_weight=[w_hold],\n",
-        "                callbacks=[lgb.early_stopping(150, verbose=False)]\n",
-        "            )\n",
-        "            val_pred_L += mdl.predict(X_hold_f).astype(np.float64) / N_SEEDS\n",
-        "            tst_pred_L += mdl.predict(X_te_f).astype(np.float64) / N_SEEDS\n",
-        "            del mdl\n",
-        "            gc.collect()\n",
-        "\n",
-        "    if use_late:\n",
-        "        val_pred = BLEND_MAIN * val_pred + BLEND_FACTOR * val_pred_F + BLEND_LATE * val_pred_L\n",
-        "        tst_pred = BLEND_MAIN * tst_pred + BLEND_FACTOR * tst_pred_F + BLEND_LATE * tst_pred_L\n",
-        "    else:\n",
-        "        val_pred = 0.85 * val_pred + 0.15 * val_pred_F\n",
-        "        tst_pred = 0.85 * tst_pred + 0.15 * tst_pred_F\n",
         "\n",
         "    print(f'Horizon {hz} Score: {weighted_rmse_score(y_hold, val_pred, w_hold):.5f}')\n",
         "\n",
@@ -326,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -335,21 +259,23 @@
           "text": [
             "\n",
             "========================================\n",
-            "FINAL AGGREGATE SCORE: 0.218067\n",
+            "FINAL AGGREGATE SCORE: 0.070073\n",
             "========================================\n",
-            "Submission shape: (1447107, 2)\n",
-            "First 10 rows (must match test row order):\n",
+            "Submission predictions: min=-9.7705, max=0.8772, mean=-0.1347, std=0.5976\n",
+            "WARNING: Prediction std is very small vs train (~32.5). This can cause LB 0 (ratio >= 1).\n",
+            "Submission shape: (1447107, 2) (rows in id order)\n",
+            "First 10 rows:\n",
             "                                       id  prediction\n",
-            "0   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3647   -0.038169\n",
-            "1  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3647   -0.091164\n",
-            "2  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3647   -0.329147\n",
-            "3   W2MW3G2L__495MGHFJ__PZ9S1Z4V__1__3647   -0.004943\n",
-            "4  W2MW3G2L__495MGHFJ__PZ9S1Z4V__10__3648   -0.106950\n",
-            "5  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3648   -0.447662\n",
-            "6   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3648   -0.036870\n",
-            "7   W2MW3G2L__495MGHFJ__PZ9S1Z4V__1__3648   -0.006619\n",
-            "8   W2MW3G2L__495MGHFJ__PZ9S1Z4V__3__3649   -0.030094\n",
-            "9  W2MW3G2L__495MGHFJ__PZ9S1Z4V__25__3649   -0.415774\n"
+            "0  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4175   -0.009167\n",
+            "1  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4176   -0.011500\n",
+            "2  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4177   -0.011500\n",
+            "3  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4178   -0.011500\n",
+            "4  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4179   -0.011500\n",
+            "5  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4180   -0.011500\n",
+            "6  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4182   -0.011500\n",
+            "7  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4183   -0.011500\n",
+            "8  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4184   -0.011500\n",
+            "9  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4185   -0.011500\n"
           ]
         }
       ],
@@ -357,7 +283,7 @@
         "final_metric = weighted_rmse_score(cv_cache['y'], cv_cache['pred'], cv_cache['wt'])\n",
         "print(f\"\\n{'='*40}\\nFINAL AGGREGATE SCORE: {final_metric:.6f}\\n{'='*40}\")\n",
         "\n",
-        "# Submission: MUST be in exact test.parquet row order (row i = test row i)\n",
+        "# Submission: write in deterministic ID order + UTF-8 so grader gets same format everywhere\n",
         "test_full = pd.read_parquet(TEST_PATH)\n",
         "pred_dict = {}\n",
         "for df in test_outputs:\n",
@@ -365,7 +291,6 @@
         "        k = str(df['id'].iloc[i]).strip()\n",
         "        pred_dict[k] = float(df['prediction'].iloc[i])\n",
         "\n",
-        "# Normalize test ids the same way for lookup\n",
         "test_ids = test_full['id'].astype(str).str.strip()\n",
         "missing = test_ids[~test_ids.isin(pred_dict)].unique()\n",
         "if len(missing) > 0:\n",
@@ -373,20 +298,34 @@
         "if len(pred_dict) != len(test_full):\n",
         "    raise RuntimeError(f\"pred_dict has {len(pred_dict)} keys but test has {len(test_full)} rows\")\n",
         "\n",
-        "# Build submission in test row order and write row-by-row (no reorder)\n",
-        "with open('submission.csv', 'w', newline='') as f:\n",
+        "# Fix: deterministic row order. Id order works if grader merges by id or test is id-sorted.\n",
+        "if SUBMISSION_BY_ID_ORDER:\n",
+        "    test_out = test_full.sort_values(by='id', key=lambda col: col.astype(str)).reset_index(drop=True)\n",
+        "else:\n",
+        "    test_out = test_full.reset_index(drop=True)\n",
+        "pred_vals = np.array([pred_dict[str(test_out['id'].iloc[i]).strip()] for i in range(len(test_out))])\n",
+        "if np.std(pred_vals) < 1e-6:\n",
+        "    raise RuntimeError(f\"Predictions nearly constant (std={np.std(pred_vals):.2e}). Fix training before submitting.\")\n",
+        "if np.all(np.abs(pred_vals) < 1e-6):\n",
+        "    raise RuntimeError(\"Predictions all ~0. Fix training before submitting.\")\n",
+        "# Scale check: train y_target has mean ~-0.67, std ~32.5. If submission preds are all small (e.g. std < 1), ratio can be >= 1 -> LB 0.\n",
+        "print(f\"Submission predictions: min={pred_vals.min():.4f}, max={pred_vals.max():.4f}, mean={pred_vals.mean():.4f}, std={pred_vals.std():.4f}\")\n",
+        "if pred_vals.std() < 2.0:\n",
+        "    print(\"WARNING: Prediction std is very small vs train (~32.5). This can cause LB 0 (ratio >= 1).\")\n",
+        "\n",
+        "with open('submission.csv', 'w', newline='', encoding='utf-8') as f:\n",
         "    f.write('id,prediction\\n')\n",
-        "    for i in range(len(test_full)):\n",
-        "        id_val = test_full['id'].iloc[i]\n",
+        "    for i in range(len(test_out)):\n",
+        "        id_val = test_out['id'].iloc[i]\n",
         "        key = str(id_val).strip()\n",
         "        pred = pred_dict[key]\n",
         "        if np.isnan(pred):\n",
         "            raise RuntimeError(f\"NaN prediction for id {id_val}\")\n",
         "        f.write(f\"{id_val},{pred:.10f}\\n\")\n",
         "\n",
-        "submission = pd.read_csv('submission.csv')\n",
-        "print(f'Submission shape: {submission.shape}')\n",
-        "print('First 10 rows (must match test row order):')\n",
+        "submission = pd.read_csv('submission.csv', encoding='utf-8')\n",
+        "print(f'Submission shape: {submission.shape} (rows in id order)')\n",
+        "print('First 10 rows:')\n",
         "print(submission.head(10))"
       ]
     }
