--- a/model.ipynb
+++ b/model.ipynb
@@ -6,12 +6,12 @@
       "source": [
         "# Time series forecasting\n",
         "\n",
-        "## Score: .1299"
+        "## Score: .2582"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -40,7 +40,7 @@
         "    TRAIN_PATH = 'ts-forecasting/train.parquet'\n",
         "    TEST_PATH = 'ts-forecasting/test.parquet'\n",
         "\n",
-        "VAL_THRESHOLD = 3600\n",
+        "VAL_THRESHOLD = 3500\n",
         "# If LB is 0 with id order, set False to write in parquet row order instead\n",
         "SUBMISSION_BY_ID_ORDER = True\n",
         "\n",
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -85,7 +85,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "horizon=1 n=1351193 mean=-0.0841 std=11.7029\n",
+            "horizon=3 n=1342793 mean=-0.2593 std=19.3691\n",
+            "horizon=10 n=1296269 mean=-0.8023 std=33.9953\n",
+            "horizon=25 n=1181897 mean=-1.7543 std=53.3072\n",
+            "all fit: n=5172152 mean=-0.6912 std=32.7503 ts_index=[1,3500]\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "t = pd.read_parquet(TRAIN_PATH, columns=['horizon', 'y_target', 'weight', 'ts_index'])\n",
+        "t_fit = t[t['ts_index'] <= VAL_THRESHOLD]\n",
+        "for hz in [1, 3, 10, 25]:\n",
+        "    s = t_fit[t_fit['horizon'] == hz]['y_target']\n",
+        "    print(f\"horizon={hz} n={len(s)} mean={s.mean():.4f} std={s.std():.4f}\")\n",
+        "print(f\"all fit: n={len(t_fit)} mean={t_fit['y_target'].mean():.4f} std={t_fit['y_target'].std():.4f} ts_index=[{t_fit['ts_index'].min()},{t_fit['ts_index'].max()}]\")\n",
+        "del t, t_fit\n",
+        "gc.collect()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -124,16 +162,6 @@
         "            lambda s: s.ewm(span=5, adjust=False).mean()\n",
         "        ).astype(np.float32)\n",
         "\n",
-        "    # Cross-sectional z-score (within ts_index, horizon) for key features; safe for test\n",
-        "    for col in ['feature_al', 'feature_am', 'feature_cg', 'feature_by']:\n",
-        "        if col not in x.columns:\n",
-        "            continue\n",
-        "        grp = x.groupby(['ts_index', 'horizon'])[col]\n",
-        "        mu_cs = grp.transform('mean').astype(np.float32)\n",
-        "        std_cs = grp.transform('std').astype(np.float32).replace(0, np.nan)\n",
-        "        x[f'{col}_cs_z'] = ((x[col] - mu_cs) / std_cs.fillna(1e-3)).fillna(0).astype(np.float32)\n",
-        "    x['horizon_num'] = x['horizon'].astype(np.float32)\n",
-        "\n",
         "    x['t_cycle'] = np.sin(2 * np.pi * x['ts_index'].astype(np.float32) / 100).astype(np.float32)\n",
         "    return x\n",
         "\n",
@@ -142,23 +170,23 @@
         "    'objective': 'regression',\n",
         "    'metric': 'rmse',\n",
         "    'learning_rate': 0.015,\n",
-        "    'n_estimators': 4000,\n",
-        "    'num_leaves': 80,\n",
-        "    'min_child_samples': 200,\n",
-        "    'feature_fraction': 0.6,\n",
-        "    'bagging_fraction': 0.7,\n",
+        "    'n_estimators': 6000,\n",
+        "    'num_leaves': 128,\n",
+        "    'min_child_samples': 120,\n",
+        "    'feature_fraction': 0.75,\n",
+        "    'bagging_fraction': 0.8,\n",
         "    'bagging_freq': 5,\n",
         "    'lambda_l1': 0.1,\n",
         "    'lambda_l2': 10.0,\n",
         "    'verbosity': -1,\n",
         "}\n",
-        "SEEDS = (42, 2024, 7, 11, 999)\n",
-        "N_SEEDS = 5"
+        "SEEDS = (42, 2024, 7, 11, 999, 123, 456)\n",
+        "N_SEEDS = 7\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -167,16 +195,16 @@
           "text": [
             "\n",
             ">>> Training horizon = 1\n",
-            "Horizon 1 Score: 0.10435\n",
+            "Horizon 1 Score: 0.07905\n",
             "\n",
             ">>> Training horizon = 3\n",
-            "Horizon 3 Score: 0.00000\n",
+            "Horizon 3 Score: 0.12589\n",
             "\n",
             ">>> Training horizon = 10\n",
-            "Horizon 10 Score: 0.00000\n",
+            "Horizon 10 Score: 0.22238\n",
             "\n",
             ">>> Training horizon = 25\n",
-            "Horizon 25 Score: 0.09142\n"
+            "Horizon 25 Score: 0.25210\n"
           ]
         }
       ],
@@ -219,8 +247,8 @@
         "\n",
         "    cfg = dict(LGB_CFG)\n",
         "    if hz in (10, 25):\n",
-        "        cfg = {**cfg, 'learning_rate': 0.01, 'n_estimators': 6500, 'num_leaves': 96,\n",
-        "               'min_child_samples': 250, 'lambda_l2': 28.0}\n",
+        "        cfg = {**cfg, 'learning_rate': 0.012, 'n_estimators': 7500, 'num_leaves': 160,\n",
+        "               'min_child_samples': 100, 'lambda_l2': 15.0}\n",
         "\n",
         "    for seed in SEEDS:\n",
         "        mdl = lgb.LGBMRegressor(**cfg, random_state=seed, n_jobs=-1)\n",
@@ -229,7 +257,7 @@
         "            sample_weight=w_fit,\n",
         "            eval_set=[(X_hold, y_hold)],\n",
         "            eval_sample_weight=[w_hold],\n",
-        "            callbacks=[lgb.early_stopping(200, verbose=False)]\n",
+        "            callbacks=[lgb.early_stopping(300, verbose=False)]\n",
         "        )\n",
         "        val_pred += mdl.predict(X_hold).astype(np.float64) / N_SEEDS\n",
         "        tst_pred += mdl.predict(te_df[feature_cols]).astype(np.float64) / N_SEEDS\n",
@@ -250,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -259,23 +287,21 @@
           "text": [
             "\n",
             "========================================\n",
-            "FINAL AGGREGATE SCORE: 0.070073\n",
+            "FINAL AGGREGATE SCORE: 0.222450\n",
             "========================================\n",
-            "Submission predictions: min=-9.7705, max=0.8772, mean=-0.1347, std=0.5976\n",
-            "WARNING: Prediction std is very small vs train (~32.5). This can cause LB 0 (ratio >= 1).\n",
             "Submission shape: (1447107, 2) (rows in id order)\n",
             "First 10 rows:\n",
             "                                       id  prediction\n",
-            "0  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4175   -0.009167\n",
-            "1  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4176   -0.011500\n",
-            "2  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4177   -0.011500\n",
-            "3  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4178   -0.011500\n",
-            "4  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4179   -0.011500\n",
-            "5  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4180   -0.011500\n",
-            "6  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4182   -0.011500\n",
-            "7  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4183   -0.011500\n",
-            "8  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4184   -0.011500\n",
-            "9  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4185   -0.011500\n"
+            "0  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4175   -0.348001\n",
+            "1  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4176   -0.464516\n",
+            "2  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4177   -0.575242\n",
+            "3  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4178   -0.561352\n",
+            "4  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4179   -0.624897\n",
+            "5  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4180   -0.603208\n",
+            "6  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4182   -0.708263\n",
+            "7  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4183   -0.677315\n",
+            "8  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4184   -0.654732\n",
+            "9  10BAVIDU__07YQ9WA4__DPPUO5X2__10__4185   -0.812249\n"
           ]
         }
       ],
@@ -308,10 +334,6 @@
         "    raise RuntimeError(f\"Predictions nearly constant (std={np.std(pred_vals):.2e}). Fix training before submitting.\")\n",
         "if np.all(np.abs(pred_vals) < 1e-6):\n",
         "    raise RuntimeError(\"Predictions all ~0. Fix training before submitting.\")\n",
-        "# Scale check: train y_target has mean ~-0.67, std ~32.5. If submission preds are all small (e.g. std < 1), ratio can be >= 1 -> LB 0.\n",
-        "print(f\"Submission predictions: min={pred_vals.min():.4f}, max={pred_vals.max():.4f}, mean={pred_vals.mean():.4f}, std={pred_vals.std():.4f}\")\n",
-        "if pred_vals.std() < 2.0:\n",
-        "    print(\"WARNING: Prediction std is very small vs train (~32.5). This can cause LB 0 (ratio >= 1).\")\n",
         "\n",
         "with open('submission.csv', 'w', newline='', encoding='utf-8') as f:\n",
         "    f.write('id,prediction\\n')\n",
